--- a/releases/nginx-deployment/index.yml
+++ b/releases/nginx-deployment/index.yml
@@ -1,4 +1,8 @@
 builds:
+  4a44d210-6dc7-40d5-5cd7-89e9e3e327a8:
+    version: "3"
+  516e71eb-71b6-460b-634e-88597401c4fc:
+    version: "2"
   cfbf9384-2f41-4f78-5dde-af61c2ed7f1f:
     version: "1"
 format-version: "2"
