--- a/releases/nginx-deployment/index.yml
+++ b/releases/nginx-deployment/index.yml
@@ -1,4 +1,6 @@
 builds:
+  2cc6ac22-18fc-402f-6924-770891d0ddd7:
+    version: "4"
   4a44d210-6dc7-40d5-5cd7-89e9e3e327a8:
     version: "3"
   516e71eb-71b6-460b-634e-88597401c4fc:
