--- a/examples/nginx.yml
+++ b/examples/nginx.yml
@@ -71,9 +71,9 @@ instance_groups:
         fi
       user_file: |
       admin:$apr1$7slUwyza$MhQ1tv3QTjNu2Y/DoM6ln0
-update:
-  canaries: 1
-  max_in_flight: 1
-  serial: false
-  canary_watch_time: 1000-60000
-  update_watch_time: 1000-60000
+# update:
+#   canaries: 1
+#   max_in_flight: 1
+#   serial: false
+#   canary_watch_time: 1000-60000
+#   update_watch_time: 1000-60000
