generate new final nginx tarball

--- a/releases/nginx-deployment/index.yml
+++ b/releases/nginx-deployment/index.yml
@@ -7,4 +7,6 @@ builds:
     version: "2"
   cfbf9384-2f41-4f78-5dde-af61c2ed7f1f:
     version: "1"
+  fab75ad8-afc4-4960-5bce-14c03e7cb040:
+    version: "5"
 format-version: "2"
