--- a/examples/nginx.yml
+++ b/examples/nginx.yml
@@ -69,11 +69,11 @@ instance_groups:
             </body></html>
         EOF
         fi
-      user_file: |
-      admin:$apr1$7slUwyza$MhQ1tv3QTjNu2Y/DoM6ln0
-# update:
-#   canaries: 1
-#   max_in_flight: 1
-#   serial: false
-#   canary_watch_time: 1000-60000
-#   update_watch_time: 1000-60000
+      # user_file: |
+      # admin:$apr1$7slUwyza$MhQ1tv3QTjNu2Y/DoM6ln0
+update:
+  canaries: 1
+  max_in_flight: 1
+  serial: false
+  canary_watch_time: 1000-60000
+  update_watch_time: 1000-60000
