creat new nginx release

--- a/releases/nginx-deployment/index.yml
+++ b/releases/nginx-deployment/index.yml
@@ -7,6 +7,8 @@ builds:
     version: "3"
   516e71eb-71b6-460b-634e-88597401c4fc:
     version: "2"
+  b05c917f-687e-4ecb-6716-929d65a09852:
+    version: "7"
   cfbf9384-2f41-4f78-5dde-af61c2ed7f1f:
     version: "1"
   fab75ad8-afc4-4960-5bce-14c03e7cb040:
