update release tarball

--- a/releases/nginx-deployment/index.yml
+++ b/releases/nginx-deployment/index.yml
@@ -1,4 +1,6 @@
 builds:
+  20b18a33-040f-4c71-454c-c9c6a4d7cdfe:
+    version: "8"
   2cc6ac22-18fc-402f-6924-770891d0ddd7:
     version: "4"
   2d252f24-a583-4006-42eb-4d758727900e:
